Fixed alignment of both buttons (the Feedback one was also a bit off)

--- a/app/static/scss/client/single_event/single_event.scss
+++ b/app/static/scss/client/single_event/single_event.scss
@@ -17,10 +17,12 @@
 
             &.fa-facebook {
                 margin-left: -0.8rem;
+                margin-right: 0.8rem;
             }
 
             &.fa-comment {
                 margin-left: -1.1rem;
+                margin-right: 0.4rem;
             }
         }
     }
